--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "REST API for Authentications using hapijs and hapi/jwt",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon ./src/server.js",
+    "migrate": "node-pg-migrate"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,11 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
     "@hapi/jwt": "^2.1.0",
-    "nanoid": "^3.1.30"
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "nanoid": "^3.1.30",
+    "node-pg-migrate": "^6.0.0",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
