--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 # server configuration
 HOST=localhost
 PORT=5000
+
+# node-postgres configuration
+PGUSER=developer
+PGHOST=localhost
+PGPASSWORD=developer
+PGDATABASE=auth_hapi
+PGPORT=5432
